Changed color in AboutMe

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>RL About Me</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/AboutMe.css">
   </head>
   <body>
     <section>
@@ -33,11 +33,11 @@
     <br>
     <h1>Life</h1>
     <br>
-    <p>I grew up in a small village in Milan on October 14th 1999. When I was younger I had many passions, some have remained while others have been lost.
+    <p>I was born in a small village in Milan on October 14th 1999. When I was younger I had many passions, some have remained while others have been lost.
        I did swimming, basketball and tennis for a few years, then I started playing the piano at 6. I kept playing it for 12 years until I became independent.
        Even today, between a study break and another I play the piano, but without consistency. Around the age of 16 I discovered the mountains and climbing and
        I fell in love with them. Being in contact with nature and perceiving the sense of discovery is what excited me the most and maybe that's why I decided to
-       study physics. Someone said 'it is not the mountain we conquer but ourself'. 
+       study physics. Someone said 'it is not the mountain we conquer but ourself'.
 
     </p>
   </body>
