--- a/Physics.html
+++ b/Physics.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RL About Me</title>
-    <link rel="stylesheet" type="text/css" href="css/Physics.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="ie-edge">
+    <title>RL Physics</title>
+    <link rel="stylesheet" href="css/Physics.css">
   </head>
   <body>
     <canvas id="canvas1"></canvas>
-    <script src="script.js"></script>
-
-    </script>
+    <script src="js/Physics.js"></script>
   </body>
 </html>
