Scroll, Personal info.

--- a/Mountain.html
+++ b/Mountain.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RL About Me</title>
+    <title>RL Mountains</title>
     <link rel="stylesheet" type="text/css" href="css/AboutMe.css">
   </head>
   <body>
@@ -10,7 +10,7 @@
       <img src="images/moon.png" id="moon">
       <img src="images/mountain.png" id="mountain">
       <img src="images/road.png" id="road">
-      <h2 id="text">About Me</h2>
+      <h2 id="text">My Dreams</h2>
     </section>
     <script type="text/javascript">
       let bg = document.getElementById("bg");
@@ -33,11 +33,7 @@
     <br>
     <h1>Life</h1>
     <br>
-    <p>I was born in a small village in Milan on October 14th 1999. When I was younger I had many passions, some have remained while others have been lost.
-       I did swimming, basketball and tennis for a few years, then I started playing the piano at 6. I kept playing it for 12 years until I became independent.
-       Even today, between a study break and another I play the piano, but without consistency. Around the age of 16 I discovered the mountains and climbing and
-       I fell in love with them. Being in contact with nature and perceiving the sense of discovery is what excited me the most and maybe that's why I decided to
-       study physics. Someone said 'it is not the mountain we conquer but ourself'.
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
     </p>
   </body>
