--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Document</title>
+    <title>RL</title>
     <link rel="stylesheet" href = "css/style.css">
     <link rel="stylesheet" href = "css/skins/color-1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -72,7 +72,7 @@
         <ul class="nav">
           <li><a href="#home" class="active"><i class="fa fa-home"></i> Home</a></li>
           <li><a href="#about"><i class="fa fa-user"></i> About Me</a></li>
-          <li><a href="#services"><i class="fas fa-radiation"></i> Physics</a></li>
+          <li><a href="#physics"><i class="fas fa-radiation"></i> Physics</a></li>
           <li><a href="#portfolio"><i class="fa fa-search"></i> Research</a></li>
           <li><a href="#contact"><i class="fa fa-comments"></i> Contact</a></li>
         </ul>
@@ -81,14 +81,16 @@
       <!-- ===== Main content Start ===== -->
       <div class="main-content">
         <!-- ===== Home section Start ===== -->
-        <section class="home section" id="home">
+        <section class="home active section" id="home">
           <div class="container">
             <div class="row">
               <div class="home-info padd-15">
                 <h3 class="hello">Hello, my name is <span class="name">Riccardo Loddo</span></h3>
                 <h3 class="my-profession">I'm a <span class="typing">physicist</span></h3>
-                <p>Lorem ipsuerunt mollit anim id est laborum.</p>
-                <a href="#contact" class="btn hire-me">Hire me</a>
+                <p>“Two things are infinite: the universe and human stupidity; and I'm not sure about the universe.” <br>
+                "Only a life lived for others is a life worthwhile."<br>
+                "The value of a man should be seen in what he gives and not in what he is able to receive."</p>
+                <a href="#" class="btn">Download CV</a>
               </div>
               <div class="home-img padd-15">
                 <a href="images/portrait.jpg">
@@ -111,12 +113,16 @@
               <div class="about-content padd-15">
                 <div class="row">
                   <div class="about-text padd-15">
-                    <h3>I'm Riccardo Loddo and <span> Web Developer</span></h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <!--<h3>I'm Riccardo Loddo and <span> Web Developer</span></h3> -->
+                    <p>I was born in a small village in Milan on October 14th 1999. When I was younger I had many passions, some have remained while others have been lost.
+                       I did swimming, basketball and tennis for a few years, then I started playing the piano at 6. I kept playing it for 12 years until I became independent.
+                       Even today, between a study break and another I play the piano, but without consistency. Around the age of 16 I discovered the <a href="Mountain.html"> mountains and climbing </a> and
+                       I fell in love with them. Being in contact with nature and perceiving the sense of discovery is what excited me the most and maybe that's why I decided to
+                       study physics. Someone said 'it is not the mountain we conquer but ourself'.</p>
                   </div>
                 </div>
                 <div class="row">
-                  <div class="personal-info padd-15">Info
+                  <div class="personal-info padd-15"><h3>Info:</h3>
                     <div class="row">
                       <div class="info-item padd-15">
                         <p>Birthday : <span>14 Oct 1999</span></p>
@@ -145,8 +151,7 @@
                     </div>
                     <div class="row">
                       <div class="buttons padd-15">
-                        <a href="#" class="btn">Download CV</a>
-                        <a href="#contact" class="btn hire-me">Hire Me</a>
+                        <a href="#contact" data-section-index= "1" class="btn hire-me">Hire Me</a>
                       </div>
                     </div>
                   </div>
@@ -193,26 +198,34 @@
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
                               <h3 class="timeline-date">
-                                <i class="fa fa-calendar"></i> 2013 - 2015
+                                <i class="fa fa-calendar"></i> 2013 - 2018
                               </h3>
-                              <h4 class="timeline-title">Master in Computer Science</h4>
-                              <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                              <h4 class="timeline-title">I.I.S. Alessando Volta</h4>
+                              <p class="timeline-text">I graduated in energy techniques and mechatronics at the <a href="http://www.iisvolta.edu.it/home/">higher education institute Alessando Volta</a> in Lodi.
+                                <ul style="list-style: none;">
+                                  <li> <h3>Vote: 87/100</h3></li>
+                                </ul>
+                              </p>
                           </div>
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
                               <h3 class="timeline-date">
-                                <i class="fa fa-calendar"></i> 2013 - 2015
+                                <i class="fa fa-calendar"></i> 2019 - 2022
                               </h3>
-                              <h4 class="timeline-title">Master in Computer Science</h4>
-                              <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                              <h4 class="timeline-title">Physic degree</h4>
+                              <p class="timeline-text">I will graduate in physics at the <a href="https://www.unimi.it/it">University of Milan</a>.
+                                <ul style="list-style: none;">
+                                  <li> <h3>Vote: cooming soon...</h3></li>
+                                </ul>
+                              </p>
                           </div>
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
                               <h3 class="timeline-date">
-                                <i class="fa fa-calendar"></i> 2013 - 2015
+                                <i class="fa fa-calendar"></i> 2022 - 2024
                               </h3>
-                              <h4 class="timeline-title">Master in Computer Science</h4>
-                              <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                              <h4 class="timeline-title">Master in Astrophysics</h4>
+                              <p class="timeline-text"> Future...maybe</p>
                           </div>
                         </div>
                       </div>
@@ -227,26 +240,34 @@
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
                               <h3 class="timeline-date">
-                                <i class="fa fa-calendar"></i> 2013 - 2015
+                                <i class="fa fa-calendar"></i> 2016
                               </h3>
-                              <h4 class="timeline-title">Master in Computer Science</h4>
-                              <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                              <h4 class="timeline-title">Internship in renewable sources</h4>
+                              <p class="timeline-text">I aid in a 32-hour school-to-work alternation percosro from March 07 to 11, 2006 focused on the topics of renewable energy production technologies and energy conservation and efficiency.</p>
                           </div>
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
                               <h3 class="timeline-date">
-                                <i class="fa fa-calendar"></i> 2013 - 2015
+                                <i class="fa fa-calendar"></i> 2017 - 2019
                               </h3>
-                              <h4 class="timeline-title">Master in Computer Science</h4>
-                              <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                              <h4 class="timeline-title">O.R.P</h4>
+                              <p class="timeline-text">I worked five months at <a href="https://www.orp.it/web/"> ORP</a> (precision retifica workshop) first as an intern, later as a clerk.</p>
                           </div>
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
                               <h3 class="timeline-date">
-                                <i class="fa fa-calendar"></i> 2013 - 2015
+                                <i class="fa fa-calendar"></i> 2018
                               </h3>
-                              <h4 class="timeline-title">Master in Computer Science</h4>
-                              <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                              <h4 class="timeline-title">O.R.P</h4>
+                              <p class="timeline-text">I worked one month at <a href="http://www.vmfspa.it/contact_us.asp"> V.M.F</a> as an intern.</p>
+                          </div>
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                              <h3 class="timeline-date">
+                                <i class="fa fa-calendar"></i> 2020
+                              </h3>
+                              <h4 class="timeline-title">Math Team olympiad</h4>
+                              <p class="timeline-text">I competed in the Math Team Olympiad at the Gallaratese School Center (MI) on March 27, 2020.</p>
                           </div>
                         </div>
                       </div>
@@ -259,23 +280,29 @@
         </section>
         <!-- ===== About section End ===== -->
         <!-- ===== Physics section Start ===== -->
-        <section class="service section" id="services">
+        <section class="service section" id="physics">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
-                <h2>Service</h2>
+                <h2>Physics</h2>
               </div>
             </div>
             <div class="row">
               <!-- ===== Physics item Start ====== -->
+              <div class="service-text padd-15">
+                <!--<h3>I'm Riccardo Loddo and <span> Web Developer</span></h3> -->
+                <p>.</p>
+              </div>
               <div class="service-item padd-15">
-                <div class="service-item-inner">
-                  <div class="icon">
-                    <i class="fa fa-mobile-alt"></i>
+                <a href="labastro.html">
+                  <div class="service-item-inner">
+                    <div class="icon">
+                      <i class="fa fa-mobile-alt"></i>
+                    </div>
+                    <h4>Astrophysics</h4>
+                    <p>Loredeserunt mollit anim id est laborum.</p>
                   </div>
-                  <h4>Astrophysics</h4>
-                  <p>Loredeserunt mollit anim id est laborum.</p>
-                </div>
+                </a>
               </div>
               <!-- ===== Physics item End ====== -->
               <!-- ===== Physics item Start ====== -->
