fixed physics part

--- a/index.html
+++ b/index.html
@@ -291,7 +291,11 @@
               <!-- ===== Physics item Start ====== -->
               <div class="service-text padd-15">
                 <!--<h3>I'm Riccardo Loddo and <span> Web Developer</span></h3> -->
-                <p>.</p>
+                <p>I was born in a small village in Milan on October 14th 1999. When I was younger I had many passions, some have remained while others have been lost.
+                   I did swimming, basketball and tennis for a few years, then I started playing the piano at 6. I kept playing it for 12 years until I became independent.
+                   Even today, between a study break and another I play the piano, but without consistency. Around the age of 16 I discovered the <a href="Mountain.html"> mountains and climbing </a> and
+                   I fell in love with them. Being in contact with nature and perceiving the sense of discovery is what excited me the most and maybe that's why I decided to
+                   study physics. Someone said 'it is not the mountain we conquer but ourself'.</p>
               </div>
               <div class="service-item padd-15">
                 <a href="labastro.html">
