--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                               <h3 class="timeline-date">
                                 <i class="fa fa-calendar"></i> 2018
                               </h3>
-                              <h4 class="timeline-title">O.R.P</h4>
+                              <h4 class="timeline-title">V.M.F</h4>
                               <p class="timeline-text">I worked one month at <a href="http://www.vmfspa.it/contact_us.asp"> V.M.F</a> as an intern.</p>
                           </div>
                           <div class="timeline-item">
@@ -298,7 +298,7 @@
                    study physics. Someone said 'it is not the mountain we conquer but ourself'.</p>
               </div>
               <div class="service-item padd-15">
-                <a href="labastro.html">
+                <a href="Physics.html">
                   <div class="service-item-inner">
                     <div class="icon">
                       <i class="fa fa-mobile-alt"></i>
