--- a/Physics.html
+++ b/Physics.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <canvas id="canvas1"></canvas>
-    <script src="js/Physics.js"></script>
+    <script src="js/physics.js"></script>
   </body>
 </html>
