--- a/Physics.html
+++ b/Physics.html
@@ -9,6 +9,36 @@
   </head>
   <body>
     <canvas id="canvas1"></canvas>
+    <h2 class="title">Astrophysics laboratory</h2>
+    <p>Here you will find some examples of reports written by students from past years. Some of them will be written in English and others in Italian and I apologize for this dualism of language. In addition there will also be problems developed in class and which will be very useful for the preparation of the exam. My advice is to understand the theory very well (once you get into the concepts it will be much easier) and try to implement the code yourself. The idea of this astronomy course is to become familiar with python and the Bayesian models used so it is <b> highly recommended not to copy the code or the relationships but only to take inspiration </b>. However I think that this kind of thing comes out much clearer with a number of examples developed.
+    <br> The five experiments to be carried out were performed simultaneously by 7 different groups. Those reported here were rated as the best.
+    </p>
+    <div class="row">
+      <div class="column1">Ciao1</div>
+      <div class="column2">Ciao2</div>
+      <div class="column3">Ciao3</div>
+    </div>
+
+
+
+
+
+
+
+
+      <h3 class="title1">Experiences:</h3>
+      <div class="table">
+      <ul id="horizontal-list">
+        <li><a href="resources/Relazione_1.pdf">Experience 1</a></li>
+        <li><a href="#">Experience 2</a></li>
+        <li><a href="#">Experience 3</a></li>
+        <li><a href="#">Experience 4</a></li>
+      </ul>
+      </div>
+
+
+  <p></p>
+
     <script src="js/physics.js"></script>
   </body>
 </html>
