--- a/index.html
+++ b/index.html
@@ -291,20 +291,41 @@
               <!-- ===== Physics item Start ====== -->
               <div class="service-text padd-15">
                 <!--<h3>I'm Riccardo Loddo and <span> Web Developer</span></h3> -->
-                <p>I was born in a small village in Milan on October 14th 1999. When I was younger I had many passions, some have remained while others have been lost.
-                   I did swimming, basketball and tennis for a few years, then I started playing the piano at 6. I kept playing it for 12 years until I became independent.
-                   Even today, between a study break and another I play the piano, but without consistency. Around the age of 16 I discovered the <a href="Mountain.html"> mountains and climbing </a> and
-                   I fell in love with them. Being in contact with nature and perceiving the sense of discovery is what excited me the most and maybe that's why I decided to
-                   study physics. Someone said 'it is not the mountain we conquer but ourself'.</p>
+                <p class="disc"> In Italy, if you have no acquaintances or connections with someone, everything will be much more difficult. If a student is not in some group of friends or has not been able to make friends (for various reasons such as shyness, distance, behavior ...) it will be really difficult to continue the study.
+                  For example, dealing with some exercises that often do not have the solutions or understanding which book is the best for the topic or more generally dealing with things that are often difficult to understand, make the student sociable, an easy life and the student alone, an impossible life. It saddens me a lot to see great teams moving forward because they are a group where everything is said between them, things are explained and exercises that can be compared. I don't understand why this solidarity is not shared with everyone. Why keep everything to yourself.<br><br>
+                  In my opinion, the university should guarantee the training of the individual student. By this I do not mean that teamwork is useless, on the contrary, it is fundamental. However, working in a group is different from comparing or suggesting clues to better pass the exam. The student must be individually capable of solving each exercise (maybe it takes a long time, that's why group work exists) but potentially he has to be able to do it himself.
+
+                  In the physics course we are just over 150 people. Imagine if these 150 people all worked as a team, where no one is left behind, where there are new ideas and new projects that we can all do together. Maybe there are guys who don't understand the initial arguments but who once understood could have new ideas or maybe understand the most difficult things. Conversely, there may be guys who understand the initial things immediately but not the more difficult ones. However there are 3-4 small groups that go on alone because they have the right feeling while there are other people who stay behind because they are alone.<br><br>
+
+                  For all these people (both in groups and not) I decided to create this site to have further support. You will find the handouts of some courses, problems and suggestions that personally helped me pass the exam.
+                  <br><br>
+                  It is actually completely wrong to have the "I have to pass the exam" mentality. The student must have the mentality: "I want to learn new things" does not matter the exam. However, once again the Italian university does not promote student knowledge but its own interests. We often have courses with a very wide program: it makes no sense to give a "general knowledge" of all the topics because 90% of the students who finish the exam do not remember anything. I would promote group work much more, to make more acquaintances and I would remove part of the programs that some courses present.
+                  <br><br>
+                  Even before COVID I thought that the lessons should be recorded. It took a pandemic to understand the power of the internet. Having the lessons recorded helps the student enormously: not only can he listen to the lessons at any time but he can also do it several times to better understand the topic. Some professors say: "but this is too easy". Too easy? What is the purpose of the professor? Making life difficult for the student or making them understand the concepts of the subject ?! Do you think that the university has spent thousands of euros for recording equipment, ipads, cameras, and then after two years they no longer use them. That's right, because they have decided that the lessons will no longer be recorded. Why didn't they make the students decide? You may very well have a social life even if you have lecture records.
+                  <br><br>
+                  To conclude, it is too demanding a topic to write in a few lines. My aim is to give the greatest knowledge and the greatest teaching material so that the student is free to learn (or copy, at his expense) all that the world has to offer.</p>
               </div>
               <div class="service-item padd-15">
                 <a href="Physics.html">
                   <div class="service-item-inner">
                     <div class="icon">
-                      <i class="fa fa-mobile-alt"></i>
+                      <i class="fa fa-star"></i>
                     </div>
-                    <h4>Astrophysics</h4>
-                    <p>Loredeserunt mollit anim id est laborum.</p>
+                    <h4>Astrophysics Laboratory</h4>
+                    <p></p>
+                  </div>
+                </a>
+              </div>
+              <!-- ===== Physics item End ====== -->
+              <!-- ===== Physics item Start ====== -->
+              <div class="service-item padd-15">
+                <a href="resources/Fisica_Medica.pdf">
+                  <div class="service-item-inner">
+                    <div class="icon">
+                      <i class="fa fa-heartbeat"></i>
+                    </div>
+                    <h4>Medical Physics</h4>
+                    <p></p>
                   </div>
                 </a>
               </div>
@@ -313,21 +334,10 @@
               <div class="service-item padd-15">
                 <div class="service-item-inner">
                   <div class="icon">
-                    <i class="fa fa-laptop-code"></i>
+                    <i class="fa fa-atom"></i>
                   </div>
-                  <h4>Astrophysics</h4>
-                  <p>Loredeserunt mollit anim id est laborum.</p>
-                </div>
-              </div>
-              <!-- ===== Physics item End ====== -->
-              <!-- ===== Physics item Start ====== -->
-              <div class="service-item padd-15">
-                <div class="service-item-inner">
-                  <div class="icon">
-                    <i class="fa fa-palette"></i>
-                  </div>
-                  <h4>Astrophysics</h4>
-                  <p>Loredeserunt mollit anim id est laborum.</p>
+                  <h4>Structure of matter</h4>
+                  <p></p>
                 </div>
               </div>
               <!-- ===== Physics item End ====== -->
@@ -380,13 +390,14 @@
             <div class="row">
               <!-- ===== Physics item Start ====== -->
               <div class="service-item padd-15">
+              <a href="Thesis.html">
                 <div class="service-item-inner">
                   <div class="icon">
-                    <i class="fa fa-search"></i>
+                    <i class="fa fa-image"></i>
                   </div>
-                  <h4>Astrophysics</h4>
-                  <p>Loredeserunt mollit anim id est laborum.</p>
+                  <h4>Thesis-Gallery</h4>
                 </div>
+              </a>
               </div>
               <!-- ===== Physics item End ====== -->
               <!-- ===== Physics item Start ====== -->
