--- a/index.html
+++ b/index.html
@@ -289,9 +289,9 @@
             </div>
             <div class="row">
               <!-- ===== Physics item Start ====== -->
-              <div class="service-text padd-15">
-                <!--<h3>I'm Riccardo Loddo and <span> Web Developer</span></h3> -->
-                <p class="disc"> In Italy, if you have no acquaintances or connections with someone, everything will be much more difficult. If a student is not in some group of friends or has not been able to make friends (for various reasons such as shyness, distance, behavior ...) it will be really difficult to continue the study.
+              <!-- <div class="service-text padd-15">
+                <h3>I'm Riccardo Loddo and <span> Web Developer</span></h3> -->
+                <!--<p class="disc">  In Italy, if you have no acquaintances or connections with someone, everything will be much more difficult. If a student is not in some group of friends or has not been able to make friends (for various reasons such as shyness, distance, behavior ...) it will be really difficult to continue the study.
                   For example, dealing with some exercises that often do not have the solutions or understanding which book is the best for the topic or more generally dealing with things that are often difficult to understand, make the student sociable, an easy life and the student alone, an impossible life. It saddens me a lot to see great teams moving forward because they are a group where everything is said between them, things are explained and exercises that can be compared. I don't understand why this solidarity is not shared with everyone. Why keep everything to yourself.<br><br>
                   In my opinion, the university should guarantee the training of the individual student. By this I do not mean that teamwork is useless, on the contrary, it is fundamental. However, working in a group is different from comparing or suggesting clues to better pass the exam. The student must be individually capable of solving each exercise (maybe it takes a long time, that's why group work exists) but potentially he has to be able to do it himself.
 
@@ -304,7 +304,7 @@
                   Even before COVID I thought that the lessons should be recorded. It took a pandemic to understand the power of the internet. Having the lessons recorded helps the student enormously: not only can he listen to the lessons at any time but he can also do it several times to better understand the topic. Some professors say: "but this is too easy". Too easy? What is the purpose of the professor? Making life difficult for the student or making them understand the concepts of the subject ?! Do you think that the university has spent thousands of euros for recording equipment, ipads, cameras, and then after two years they no longer use them. That's right, because they have decided that the lessons will no longer be recorded. Why didn't they make the students decide? You may very well have a social life even if you have lecture records.
                   <br><br>
                   To conclude, it is too demanding a topic to write in a few lines. My aim is to give the greatest knowledge and the greatest teaching material so that the student is free to learn (or copy, at his expense) all that the world has to offer.</p>
-              </div>
+              </div> -->
               <div class="service-item padd-15">
                 <a href="Physics.html">
                   <div class="service-item-inner">
