Add file pdf and zip in astrophysic

--- a/Physics.html
+++ b/Physics.html
@@ -14,30 +14,47 @@
     <br> The five experiments to be carried out were performed simultaneously by 7 different groups. Those reported here were rated as the best.
     </p>
     <div class="row">
-      <div class="column1">Ciao1</div>
-      <div class="column2">Ciao2</div>
-      <div class="column3">Ciao3</div>
+      <div class="column1"><b>Experiences:</b></div>
+      <div class="column2"><b>Code:</b></div>
+      <div class="column4"><b>Vote:</b></div>
+      <div class="column3"><b>Problem and theory:</b></div>
+    </div>
+    <div class="column1">
+      <ul id="horizontal-list">
+        <li><a href="resources/Relazione_1.pdf">Experience 1</a></li>
+        <li><a href="resources/Relazione_2.pdf">Experience 2</a></li>
+        <li><a href="resources/Relazione_3.pdf">Experience 3</a></li>
+        <li><a href="resources/Relazione_4.pdf">Experience 4</a></li>
+        <li><a href="resources/Relazione_5.pdf">Experience 5</a></li>
+      </ul>
+    </div>
+    <div class="column2">
+      <ul id="horizontal-list">
+        <li><a href="resources/Exp_1.zip">Code 1</a></li>
+        <li><a href="resources/Exp_2.zip">Code 2</a></li>
+        <li><a href="resources/Exp_3.zip">Code 3</a></li>
+        <li><a href="resources/Exp_4.zip">Code 4</a></li>
+        <li><a href="resources/Exp_5.zip">Code 5</a></li>
+      </ul>
+    </div>
+    <div class="column4">
+      <ul id="horizontal-list">
+        <li>Vote: 8.0/10</li>
+        <li>Vote: 7.5/10</li>
+        <li>Vote: 8.0/10</li>
+        <li>Vote: 6.5/10</li>
+        <li>Vote: 8.5/10</li>
+      </ul>
+    </div>
+    <div class="column3">
+      <ul id="horizontal-list">
+        <li><a href="resources/Problemi.pdf">Problem</a></li>
+      </ul>
     </div>
 
 
-
-
-
-
-
-
-      <h3 class="title1">Experiences:</h3>
-      <div class="table">
-      <ul id="horizontal-list">
-        <li><a href="resources/Relazione_1.pdf">Experience 1</a></li>
-        <li><a href="#">Experience 2</a></li>
-        <li><a href="#">Experience 3</a></li>
-        <li><a href="#">Experience 4</a></li>
-      </ul>
-      </div>
-
-
-  <p></p>
+  <p class="wow">A special thanks goes to all those who have contributed to this path of growth and innovation. In particular:
+  Nicola Bianchetti, Matteo Bianchi, Diana Capelli, Dalila Signorelli, Riccardo Rusnati, Viola Cazzaniga, Gianluca Scarpe, Nicole Grillo, Margherita Pini, Federico Riboldi, Francesca Brivio.</p>
 
     <script src="js/Physics.js"></script>
   </body>
