--- a/index.html
+++ b/index.html
@@ -343,6 +343,17 @@
               </a>
               </div>
               <!-- ===== Physics item End ====== -->
+              <div class="service-item padd-15">
+                <a href="tnds.html">
+                  <div class="service-item-inner">
+                    <div class="icon">
+                      <i class="fa fa-terminal"></i>
+                    </div>
+                    <h4>TNDS</h4>
+                    <p></p>
+                  </div>
+                </a>
+              </div>
               <!-- ===== Physics item Start ====== -->
               <div class="service-item padd-15">
                 <div class="service-item-inner">
@@ -404,13 +415,14 @@
               <!-- ===== Physics item End ====== -->
               <!-- ===== Physics item Start ====== -->
               <div class="service-item padd-15">
+              <a href="resources/Site.pdf">
                 <div class="service-item-inner">
                   <div class="icon">
-                    <i class="fa fa-search"></i>
+                    <i class="fa fa-graduation-cap"></i>
                   </div>
-                  <h4>Astrophysics</h4>
-                  <p>Loredeserunt mollit anim id est laborum.</p>
+                  <h4>Thesis</h4>
                 </div>
+              </a>
               </div>
               <!-- ===== Physics item End ====== -->
               <!-- ===== Physics item Start ====== -->
