--- a/tnds.html
+++ b/tnds.html
@@ -75,7 +75,7 @@
       <p class = "troglod"> TNDS</p>
       <br>
       <p class="text">In this section you can find the solved exams related to the TNDS course. In my opinion this exam is very useful so the idea is to try the exams yourself and if things don't return you can look here. In particular you will find zip folders containing each exam test. All codes with an asterisk (*) mean that some points are missing that I was unable to make.
-                      <b>  Warning </b>: they are definitely not the best programs. They could be written much neater and more elegant. Furthermore, the computational time (however small) could also be better. However, they work and you can take a cue from them.
+                      <b>  Warning </b>: they are definitely not the best programs. They could be written much neater and more elegant. Furthermore, the computational time (however small) could also be better. However, they work and you can take a cue from them. It is absolutely not necessary to rely on these writings to pass the exam. This is only a help for students who are planning to try some exam topics.
       </p>
     </section>
     <div class="row">
@@ -85,12 +85,19 @@
     <div class="column1">
       <ul id="horizontal-list">
       <li><a href="resources/AppelloTNDS_20200615.pdf">15/06/2020</a></li>
+      <li><a href="resources/Compito_lab2_gen09_2.pdf">29/01/2009*</a></li>
+      <li><a href="resources/Compito_lab2_giu09.pdf">25/06/2009</a></li>
+      <li><a href="resources/Compito_lab2_giu10.pdf">10/06/2010</a></li>
+      <li><a href="resources/Compito_lab2_lug09.pdf">22/07/2009</a></li>
       </ul>
     </div>
-    <div class="column1">
+    <div class="column2">
       <ul id="horizontal-list">
         <li><a href="resources/15_06_2020.zip">15/06/2020</a></li>
-    
+        <li><a href="resources/29_01_2009_.zip">29/01/2009*</a></li>
+        <li><a href="resources/25_06_2009.zip">25/06/2009</a></li>
+        <li><a href="resources/10_06_2010.zip">10/06/2010</a></li>
+        <li><a href="resources/22_07_2009.zip">22/07/2009</a></li>
       </ul>
     </div>
 
