--- a/Physics.html
+++ b/Physics.html
@@ -48,7 +48,7 @@
     </div>
     <div class="column4">
       <ul id="horizontal-list">
-        <li><a href="resources/Problemi.pdf">Problem</a></li>
+        <li><a href="resources/bhoo.pdf">Problem</a></li>
       </ul>
     </div>
 
