--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <div class="container">
             <div class="row">
               <div class="home-info padd-15">
-                <h3 class="hello">Hello, my name is <span class="name">Riccardo Loddo</span></h3>
+                <h3 class="hello"> <!-- =====Hello, my name is ===== --><span class="name">Riccardo Loddo</span></h3>
                 <h3 class="my-profession">I'm a <span class="typing">physicist</span></h3>
                 <p>“Two things are infinite: the universe and human stupidity; and I'm not sure about the universe.” <br>
                 "Only a life lived for others is a life worthwhile."<br>
@@ -100,8 +100,6 @@
             </div>
           </div>
         </section>
-        <!-- ===== Home section End ===== -->
-        <!-- ===== About section Start ===== -->
         <section class="about section" id="about">
           <div class="container">
             <div class="row">
@@ -128,7 +126,7 @@
                         <p>Birthday : <span>14 Oct 1999</span></p>
                       </div>
                       <div class="info-item padd-15">
-                        <p>Age : <span>22</span></p>
+                        <p>Age : <span>23</span></p>
                       </div>
                       <div class="info-item padd-15">
                         <p>Website : <span>www.riccardoloddo.com</span></p>
@@ -194,7 +192,6 @@
                     <div class="row">
                       <div class="timeline-box padd-15">
                         <div class="timeline shadow-dark">
-                          <!--===== timeline item =======-->
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
                               <h3 class="timeline-date">
@@ -213,9 +210,9 @@
                                 <i class="fa fa-calendar"></i> 2019 - 2022
                               </h3>
                               <h4 class="timeline-title">Physic degree</h4>
-                              <p class="timeline-text">I will graduate in physics at the <a href="https://www.unimi.it/it">University of Milan</a>.
+                              <p class="timeline-text">I graduated in physics at the <a href="https://www.unimi.it/it">University of Milan (Mi)</a>.
                                 <ul style="list-style: none;">
-                                  <li> <h3>Vote: cooming soon...</h3></li>
+                                  <li> <h3>Vote: 97/110</h3></li>
                                 </ul>
                               </p>
                           </div>
@@ -224,8 +221,8 @@
                               <h3 class="timeline-date">
                                 <i class="fa fa-calendar"></i> 2022 - 2024
                               </h3>
-                              <h4 class="timeline-title">Master in Astrophysics</h4>
-                              <p class="timeline-text"> Future...maybe</p>
+                              <h4 class="timeline-title">Master in Theoretical Astrophysics</h4>
+                              <p class="timeline-text"> More info in future...</p>
                           </div>
                         </div>
                       </div>
@@ -356,13 +353,15 @@
               </div>
               <!-- ===== Physics item Start ====== -->
               <div class="service-item padd-15">
+              <a href="resources/Fluidodinamica_quasi.pdf">
                 <div class="service-item-inner">
                   <div class="icon">
-                    <i class="fa fa-code"></i>
+                    <i class="fa fa-globe"></i>
                   </div>
-                  <h4>Astrophysics</h4>
-                  <p>Loredeserunt mollit anim id est laborum.</p>
+                  <h4>Cosmic Physics 1 </h4>
+                  <p>Complete in a few days</p>
                 </div>
+              </a>
               </div>
               <!-- ===== Physics item End ====== -->
               <!-- ===== Physics item Start ====== -->
