Curriculum, ordered experience

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <!-- ===== Aside Start ===== -->
       <div class="aside">
         <div class="logo">
-          <a href="#"><span>A</span>tlas</a>
+          <a href="#"><span>R</span><span>L</span></a>
         </div>
         <div class="nav-toggler">
           <span></span>
@@ -90,7 +90,7 @@
                 <p>“Two things are infinite: the universe and human stupidity; and I'm not sure about the universe.” <br>
                 "Only a life lived for others is a life worthwhile."<br>
                 "The value of a man should be seen in what he gives and not in what he is able to receive."</p>
-                <a href="#" class="btn">Download CV</a>
+                <a href="resources/Curriculum.pdf" class="btn">Download CV</a>
               </div>
               <div class="home-img padd-15">
                 <a href="images/portrait.jpg">
@@ -120,7 +120,7 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="personal-info padd-15"><h3>Info:</h3>
+                  <div class="personal-info padd-15"><h3><p>Info:</p></h3>
                     <div class="row">
                       <div class="info-item padd-15">
                         <p>Birthday : <span>14 Oct 1999</span></p>
@@ -159,7 +159,7 @@
                         <h5>CSS</h5>
                         <div class="progress">
                           <div class="progress-in" style="width: 76%"></div>
-                          <div class="skill-percent">76%</div>
+                          <div class="skill-percent">46%</div>
                         </div>
                       </div>
                       <div class="skill-item padd-15">
@@ -173,14 +173,14 @@
                         <h5>Phyton</h5>
                         <div class="progress">
                           <div class="progress-in" style="width: 40%"></div>
-                          <div class="skill-percent">40%</div>
+                          <div class="skill-percent">55%</div>
                         </div>
                       </div>
                       <div class="skill-item padd-15">
                         <h5>HTML</h5>
                         <div class="progress">
                           <div class="progress-in" style="width: 80%"></div>
-                          <div class="skill-percent">80%</div>
+                          <div class="skill-percent">30%</div>
                         </div>
                       </div>
                     </div>
@@ -195,14 +195,10 @@
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
                               <h3 class="timeline-date">
-                                <i class="fa fa-calendar"></i> 2013 - 2018
+                                <i class="fa fa-calendar"></i> 2022 - 2024
                               </h3>
-                              <h4 class="timeline-title">I.I.S. Alessando Volta</h4>
-                              <p class="timeline-text">I graduated in energy techniques and mechatronics at the <a href="http://www.iisvolta.edu.it/home/">higher education institute Alessando Volta</a> in Lodi.
-                                <ul style="list-style: none;">
-                                  <li> <h3>Vote: 87/100</h3></li>
-                                </ul>
-                              </p>
+                              <h4 class="timeline-title">Master in Theoretical Astrophysics</h4>
+                              <p class="timeline-text"> More info in future...</p>
                           </div>
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
@@ -212,17 +208,21 @@
                               <h4 class="timeline-title">Physic degree</h4>
                               <p class="timeline-text">I graduated in physics at the <a href="https://www.unimi.it/it">University of Milan (Mi)</a>.
                                 <ul style="list-style: none;">
-                                  <li> <h3>Vote: 97/110</h3></li>
+                                  <!-- ===== <li> <h3>Vote: 97/110</h3></li> -->
                                 </ul>
                               </p>
                           </div>
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
                               <h3 class="timeline-date">
-                                <i class="fa fa-calendar"></i> 2022 - 2024
+                                <i class="fa fa-calendar"></i> 2013 - 2018
                               </h3>
-                              <h4 class="timeline-title">Master in Theoretical Astrophysics</h4>
-                              <p class="timeline-text"> More info in future...</p>
+                              <h4 class="timeline-title">I.I.S. Alessando Volta</h4>
+                              <p class="timeline-text">I graduated in energy techniques and mechatronics at the <a href="http://www.iisvolta.edu.it/home/">higher education institute Alessando Volta</a> in Lodi.
+                                <ul style="list-style: none;">
+                                  <!-- ===== <li> <h3>Vote: 87/100</h3></li> -->
+                                </ul>
+                              </p>
                           </div>
                         </div>
                       </div>
@@ -237,18 +237,10 @@
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
                               <h3 class="timeline-date">
-                                <i class="fa fa-calendar"></i> 2016
+                                <i class="fa fa-calendar"></i> 2020
                               </h3>
-                              <h4 class="timeline-title">Internship in renewable sources</h4>
-                              <p class="timeline-text">I aid in a 32-hour school-to-work alternation percosro from March 07 to 11, 2006 focused on the topics of renewable energy production technologies and energy conservation and efficiency.</p>
-                          </div>
-                          <div class="timeline-item">
-                            <div class="circle-dot"></div>
-                              <h3 class="timeline-date">
-                                <i class="fa fa-calendar"></i> 2017 - 2019
-                              </h3>
-                              <h4 class="timeline-title">O.R.P</h4>
-                              <p class="timeline-text">I worked five months at <a href="https://www.orp.it/web/"> ORP</a> (precision retifica workshop) first as an intern, later as a clerk.</p>
+                              <h4 class="timeline-title">Math Team olympiad</h4>
+                              <p class="timeline-text">I competed in the Math Team Olympiad at the Gallaratese School Center (MI) on March 27, 2020.</p>
                           </div>
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
@@ -261,10 +253,18 @@
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
                               <h3 class="timeline-date">
-                                <i class="fa fa-calendar"></i> 2020
+                                <i class="fa fa-calendar"></i> 2017 - 2019
                               </h3>
-                              <h4 class="timeline-title">Math Team olympiad</h4>
-                              <p class="timeline-text">I competed in the Math Team Olympiad at the Gallaratese School Center (MI) on March 27, 2020.</p>
+                              <h4 class="timeline-title">O.R.P</h4>
+                              <p class="timeline-text">I worked five months at <a href="https://www.orp.it/web/"> ORP</a> (precision retifica workshop) first as an intern, later as a clerk.</p>
+                          </div>
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                              <h3 class="timeline-date">
+                                <i class="fa fa-calendar"></i> 2016
+                              </h3>
+                              <h4 class="timeline-title">Internship in renewable sources</h4>
+                              <p class="timeline-text">I aid in a 32-hour school-to-work alternation from March 07 to 11, 2016 focused on the topics of renewable energy production technologies and energy conservation and efficiency.</p>
                           </div>
                         </div>
                       </div>
