Analisi_Data all file

--- a/Analisi_Dati.html
+++ b/Analisi_Dati.html
@@ -10,15 +10,15 @@
   <body>
     <canvas id="canvas1"></canvas>
     <h2 class="title">Methodologies of Data Analysis</h2>
-    <p>The section on the course of Physics and Data Analysis Methodologies at the University of Milan was created to provide students with easy access to the
-      complete course syllabus and computer exercises. The syllabus contains all the necessary information and formulas to understand the course, while the computer exercises
-       help students develop their practical skills in data analysis. I'm happy to share these materials with you and encourage you to use them to deepen your understanding
-      of the subject and improve your learning!
+    <p>This section is designed to provide students with easy access to the complete course syllabus and computer exercises.
+      I am happy to share these materials with you and encourage you to use them to deepen your understanding of the subject and
+      enhance your learning! I hope they are helpful. <br>
+      <b>PS: In exercise two remember to comment out the TApplicatio part and the last part of the code if you want to have the signal graphs.
     </p>
     <div class="row">
       <div class="column1"><b>Problem:</b></div>
       <div class="column2"><b>Code:</b></div>
-      <div class="column4"><b>Code:</b></div>
+      <div class="column4"><b>Relation:</b></div>
       <!--<div class="column3"><b>Relation</b></div>-->
     </div>
     <div class="column1">
@@ -27,15 +27,19 @@
         <li><a href="resources/Problemi_2.pdf">Problem 2</a></li>
         <li><a href="resources/Problemi_3.pdf">Problem 3</a></li>
         <li><a href="resources/Problemi_4.pdf">Problem 4</a></li>
+        <li><a href="resources/Merli.pdf">Problem 5</a></li>
+        <li><a href="resources/Merli.pdf">Problem 6</a></li>
         <!--<li><a href="resources/Relazione_5.pdf">Experience 5</a></li>-->
       </ul>
     </div>
     <div class="column2">
       <ul id="horizontal-list">
-        <li><a href="resources/Exp_1.zip">Code 1</a></li>
-        <li><a href="resources/Exp_2.zip">Code 2</a></li>
-        <li><a href="resources/Exp_3.zip">Code 3</a></li>
-        <li><a href="resources/Exp_4.zip">Code 4</a></li>
+        <li><a href="resources/Analisi_Dati_1.zip">Code 1</a></li>
+        <li><a href="resources/Analisi_Dati_2.zip">Code 2</a></li>
+        <li><a href="resources/Analisi_Dati_3.zip">Code 3</a></li>
+        <li><a href="resources/Analisi_Dati_4.zip">Code 4</a></li>
+        <li><a href="resources/Analisi_Dati_5.zip">Code 5</a></li>
+        <li><a href="resources/Analisi_Dati_6.zip">Code 6</a></li>
       </ul>
     </div>
     <!--<div class="column3">
@@ -49,12 +53,13 @@
     </div>-->
     <div class="column4">
       <ul id="horizontal-list">
-        <li><a href="resources/bhoo.pdf">Problem</a></li>
+        <li><a href="resources/Analisi_Dati_Relazione.pdf">Relation</a></li>
       </ul>
     </div>
 
 
   <p class="wow">
+
 
   </p>
 
