--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
               <div class="contact-info-item padd-15">
                 <div class="icon"><i class="fa fa-globe-europe"></i></div>
                 <h4>Website</h4>
-                <p>www.riccaroloddo.com</p>
+                <p>www.riccardoloddo.com</p>
               </div>
               <!-- Contact info item end-->
             </div>
